Toric Varieties web page

--- a/advising/advising.html
+++ b/advising/advising.html
@@ -83,6 +83,11 @@ You needn't take my word on this, feel free to contact those who have worked wit
     <A HREF="https://jordylopez27.github.io/"></a>Somak Dutta, TAMU Ph.D. Student.
  </li>
  <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <li>
+    <A HREF="https://jordylopez27.github.io/"></a>Ruzho Sagayaraj, TAMU Ph.D. Student.
+ </li>
+ <!------------------------------------------------------------------>
 </ul>
 
 <font color=maroon>Former Students</font>
