--- a/advising/index.html
+++ b/advising/index.html
@@ -47,6 +47,10 @@
      <A HREF=""></a>Somak Dutta, TAMU Ph.D. Student.
     </li>
  <!------------------------------------------------------------------>
+   <li>
+     <A HREF=""></a>Ruzho Sagayaraj, TAMU Ph.D. Student.
+    </li>
+ <!------------------------------------------------------------------>
     <br>
 
 
