--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
      <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>
     <!-------------------------------------------------->
    <tr valign=top>
-     <td colspan=1 rowspan=4><font color=blue><b>Advising:</b></font></td>
-     <td colspan=2 rowspan=4>Blocker 601L</td>
+     <td colspan=3><font color=blue><b>Honors Advising:</b></font></td>
      <td> Mondays </td><td>13:00-14:00 </td>
     </tr>
     <!-------------------------------------------------->
-     <tr><td> Tuesday </td><td>17:00-18:00  </td> </tr>
+     <tr valign=top><td rowspan=3></td>     <td colspan=2 rowspan=3>Blocker 601L</td>
+      <td> Tuesday </td><td>17:00-18:00  </td> </tr>
     <!-------------------------------------------------->
      <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
     <!-------------------------------------------------->
