--- a/service.html
+++ b/service.html
@@ -331,6 +331,11 @@
     <A HREF="https://jordylopez27.github.io/"></a>Somak Dutta, TAMU Ph.D. Student.
  </dd>
  <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <dd>
+    <A HREF="https://jordylopez27.github.io/"></a>Ruzho Sagayaraj, TAMU Ph.D. Student.
+ </dd>
+ <!------------------------------------------------------------------>
 
  <br>
 <!--------------------------------------------------------->
