--- a/teaching.html
+++ b/teaching.html
@@ -205,9 +205,14 @@
     <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
   </dd>
  <!------------------------------------------------------------------>
-<!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
   <dd>
     <A HREF=""></a>Somak Dutta, TAMU Ph.D. Student.
+  </dd>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <dd>
+    <A HREF=""></a>Ruzho Sagayaraj, TAMU Ph.D. Student.
   </dd>
  <!------------------------------------------------------------------>
 
