--- a/CV.html
+++ b/CV.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <HTML>
 <HEAD>
    <TITLE>Curriculum Vitae, Frank Sottile</TITLE>
@@ -459,6 +459,11 @@ Cambridge University.
  <!------------------------------------------------------------------>
    <li>
      <A HREF=""></a>Somak Dutta, November 2023 &ndash; 
+    </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+   <li>
+     <A HREF=""></a>Ruzho Sagarayj, August 2024 &ndash; 
     </li>
  <!------------------------------------------------------------------>
   
