--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
     <tr valign=top><td><font color=brown>MATH 666</font></td>
-      <td><a href="teaching/24.2/Toric.html"></a>Toric Varieties</td>
+      <td><a href="teaching/24.2/Toric.html">Toric Varieties</a></td>
       <td align=left><a href="teaching/24.2/Toric.txt">Outline</a> </td>
       <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 110
       </td>
@@ -385,7 +385,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Jul 11 21:16:21 CEST 2024 by sottile</p>  
+<p>Last modified: Tue Aug 20 08:33:06 CDT 2024 by sottile</p>  
  </body>
 </html> 
 
