--- a/teaching/24.2/Toric.html
+++ b/teaching/24.2/Toric.html
@@ -91,7 +91,15 @@ commutative algebra and algebraic geometry will be helpful.
 
 <table>
  <tr valign=top>
-  <td>
+   <td>
+
+   <font color=maroon size =+1><b>Macaulay2 Scripts</b></font>
+   <ul>
+    <li><a href="Examples/08-20.m2">08-20.m2</a>.   </li>
+
+   </ul>
+
+     
    <font size=+1 color=brown>Schedule</font><br>
    &nbsp; &nbsp;<font size=+1 color=magenta>Toric Varieties</font>
    <ul>
@@ -126,8 +134,9 @@ commutative algebra and algebraic geometry will be helpful.
 
     <li> <font color=blue><b>Toric Degenerations</b></font> </li>
    </ul>
+ 
   </td>
-
+  
   <!---------------------------------------------------------------------------->
   <td width=10>&nbsp;</td>
   <!---------------------------------------------------------------------------->
