--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <tr valign=top><td><font color=brown>MATH 666</font></td>
       <td><a href="teaching/24.2/Toric.html">Toric Varieties</a></td>
       <td align=left><a href="teaching/24.2/Toric.txt">Outline</a> </td>
-      <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 110
+      <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 306
       </td>
     </tr>
     <!-------------------------------------------------->
@@ -159,10 +159,12 @@
     </tr>
     <!-------------------------------------------------->
      <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>
+     <!-------------------------------------------------->
+     <tr><td></td><td colspan=4><hr></td></tr>
     <!-------------------------------------------------->
    <tr valign=top>
      <td colspan=3><font color=blue><b>Honors Advising:</b></font></td>
-     <td> Mondays </td><td>13:00-14:00 </td>
+     <td> Mondays </td><td>13:00-14:00</td>
     </tr>
     <!-------------------------------------------------->
      <tr valign=top><td rowspan=3></td>     <td colspan=2 rowspan=3>Blocker 601L</td>
@@ -385,7 +387,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Tue Aug 20 08:33:06 CDT 2024 by sottile</p>  
+<p>Last modified: Thu Aug 22 17:27:30 CDT 2024 by sottile</p>  
  </body>
 </html> 
 
