--- a/talks.html
+++ b/talks.html
@@ -108,24 +108,38 @@
 <!-------------------------------------------------------------------->
   </td>
  </tr>
- <!------------------------------------------------------------>
+ <!---------------------------------------------------------------------------------------------------->
  <tr>
  <td colspan=3>
- <!------------------------------------------------------------------------>
+ <!---------------------------------------------------------------------------------------------------->
  <hr>
- <!------------------------------------------------------------------------>
+ <!---------------------------------------------------------------------------------------------------->
  <B><FONT SIZE=+1 color=brown>Upcoming Talks</FONT></B>
  <ul>
 
-  <!---------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    AMS Special Session on Mathematics of topological insulators,
+    Joint Mathematics Meetings, Seattle, January 8&ndash;11 2025.
+    <a href="talks/21/Discriminant.txt"></a>
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
     AMS Special Session on Non-Archimedean, Algebraic, Tropical Geometry and applications, Fall Central Section Meeting,
     San Antonio, TX, 14&ndash;15 September 2024.
     <a href="talks/21/Discriminant.txt">abstract</a>
    </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Frontiers of Arithmetic in Enumerative Geometry</I></font>, 
     <a href="https://www.birs.ca/events/2024/5-day-workshops/24w5229">Computational Geometry</a>,
@@ -134,9 +148,6 @@
     <a href="talks/24/Frontiers.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------->
-
-
-   
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Bounds on Reality</I></font>, 
@@ -145,12 +156,6 @@
     20 May 2024.
     <a href="talks/24/RealBounds.txt">abstract</a>
   </li>
-  <!---------------------------------------------------------------------------------------->
-   <!---------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
