--- a/teaching.html
+++ b/teaching.html
@@ -141,7 +141,7 @@
     <tr valign=top><td><font color=brown>MATH 666</font></td>
       <td><a href="teaching/24.2/Toric.html"></a>Toric Varieties</td>
       <td align=left><a href="teaching/24.2/Toric.txt">Outline</a> </td>
-      <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 110
+      <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 206
       </td>
     </tr>
     <!-------------------------------------------------->
@@ -228,6 +228,6 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Wed Jan 31 16:46:44 GMT 2024 by sottile</p>  
+<p>Last modified: Thu Aug 22 17:27:42 CDT 2024 by sottile</p>  
 </body> </html>
  
