updating Toric and LG4

--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
      <td>Blocker 302</td>
    </tr>
       <tr> <td>&nbsp;</td>
+     <td><a href="https://www.math.tamu.edu/seminars/cag/">Combinatorial Algebraic Geometry</a>
+     </td>
+     <td width=30></td>
+     <td>Fridays 10:30&ndash;11:20&nbsp;&nbsp;</td>
+     <td>Blocker 306</td>
+   </tr>
+   </tr>
+      <tr> <td>&nbsp;</td>
      <td><a href="https://www.math.tamu.edu/seminars/harmonic/">MPHA</a>
      </td>
      <td width=30></td>
@@ -387,7 +395,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Aug 22 17:27:30 CDT 2024 by sottile</p>  
+<p>Last modified: Fri Aug 23 16:46:44 CDT 2024 by sottile</p>  
  </body>
 </html> 
 
