--- a/talks.html
+++ b/talks.html
@@ -120,9 +120,25 @@
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Plenary talk, SIAM Conference on Applications of Algebra and Geometry,
+    Madison, Wisconsin, 7&ndash;11 July 2025.
+    <a href="talks/24/CPD.txt"></a>
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Periodic Graph</I></font>,
     AMS Special Session on Mathematics of topological insulators,
     Joint Mathematics Meetings, Seattle, January 8&ndash;11 2025.
-    <a href="talks/21/Discriminant.txt"></a>
+    <a href="talks/24/CPD.txt"></a>
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Special Session on Computations and Applications of Algebraic Geometry and Commutative Algebra,
+    AMS-AustMS-NZMS International Meeting  in Auckland, New Zealand, taking place December 9&ndash;13, 2024.
+    <a href="talks/24/CPD.txt"></a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
@@ -513,7 +529,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Aug 08 17:12:20 CDT 2024 by sottile</p>  
+<p>Last modified: Sat Aug 24 16:37:34 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
