--- a/teaching/24.2/Toric.html
+++ b/teaching/24.2/Toric.html
@@ -51,7 +51,7 @@
 <!---------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------->
-<font size=+1 color=brown>Abstract</font><br>
+<font size=+1 color=brown>About this course</font><br>
 <p>
    Among the most accessible classes of algebraic varieties
 are toric varieties.   This is fortunate for these are also among
@@ -101,7 +101,6 @@ commutative algebra and algebraic geometry will be helpful.
 
      
    <font size=+1 color=brown>Schedule</font><br>
-   &nbsp; &nbsp;<font size=+1 color=magenta>Toric Varieties</font>
    <ul>
     <li> <font color=blue><b>Toric ideals</b></font> </li>
      <ul> 
@@ -150,13 +149,21 @@ commutative algebra and algebraic geometry will be helpful.
    <font color=brown size=+1>Some Sources:</font><br>
 
    <table>
+  <!---------------------------------------------------------------------------------------------------->
    <tr valign=top>
-     <td colspan=2> I have some notes that I wrote for a CIMPA school in Ibadan, Nigeria in 2017:
+     <td colspan=2> I have some notes on algebraicc geometry and Gr&ouml;bner bases; these are the first two chapters in
+       the following set of notes (the others are unfinished).
+     <a href="../../tmp/aga.pdf"><i>Algebraic Geometry for Applications</i></a>.<br><br>
+
+     </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------->
+   <tr valign=top>     <td colspan=2> I have some notes that I wrote for a CIMPA school in Ibadan, Nigeria in 2017:
      <a href="../../research/pdf/CIMPA17.pdf"><i>Ibadan Lectures on Toric Varieties</i></a>.<br><br>
 
      </td>
    </tr>
-   <!---------------------------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------------------------->
     <tr valign=top>
     <td>
       I can recommend the  monumental book
@@ -168,12 +175,9 @@ commutative algebra and algebraic geometry will be helpful.
      </td>
      <td><img height=200pt src="CLS.jpg"></td>
     </tr>
-   </table>
-  
+    <!---------------------------------------------------------------------------------------------------->
 
-   
-  <table>
-   <tr valign=top>
+    <tr valign=top>
     <td>
       Another popular book is Fulton's <i>Introduction to Toric Varieties</i>, by 
       Princeton University Press.
@@ -182,18 +186,17 @@ commutative algebra and algebraic geometry will be helpful.
       It is not as elementary as the book by Cox, Little, and Schenck or that by Ewald, but it
       is much shorter and gives a good introduction to the subject.
      </td>
-     <td><img height=180pt src="fulton.jpg"></td>
+     <td align=center><img height=180pt src="fulton.jpg"></td>
     </tr>
-   </table>
-  
-  <table>
-   <tr>
+    <!---------------------------------------------------------------------------------------------------->
+
+    <tr>
     <td valign=top>
       This book by Ewald treats both the algebraic geometry of toric varieties, and the related
        geometric combinatorics.
       Many from combinatorics find it the right introduction to the subject.
      </td>
-     <td><img height=180pt src="ewald.jpg"></td>
+     <td align=center><img height=180pt src="ewald.jpg"></td>
     </tr>
    </table>
   
