--- a/talks.html
+++ b/talks.html
@@ -130,7 +130,7 @@
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Periodic Graph</I></font>,
     AMS Special Session on Mathematics of topological insulators,
     Joint Mathematics Meetings, Seattle, January 8&ndash;11 2025.
-    <a href="talks/24/CPD.txt"></a>
+    <a href="talks/25/CPD.txt">CPD.txt</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
