--- a/talks.html
+++ b/talks.html
@@ -130,7 +130,7 @@
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Periodic Graph</I></font>,
     AMS Special Session on Mathematics of topological insulators,
     Joint Mathematics Meetings, Seattle, January 8&ndash;11 2025.
-    <a href="talks/25/CPD.txt">CPD.txt</a>
+    <a href="talks/25/CPD.txt">Abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
@@ -149,6 +149,14 @@
     <a href="talks/21/Discriminant.txt">abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Bounds on Reality</I></font>, 
+    <a href="https://www.math.tamu.edu/seminars/cag/">Combinatorial Algebraic Geometry Seminar</a>,
+    TAMU, 30 August 2024.
+    <a href="talks/24/RealBounds.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
 </ul>
 <hr>
@@ -529,7 +537,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sat Aug 24 16:37:34 CDT 2024 by sottile</p>  
+<p>Last modified: Fri Aug 30 08:29:51 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
