--- a/talks.html
+++ b/talks.html
@@ -135,10 +135,10 @@
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Bloch Variety</I></font>,
     Special Session on Computations and Applications of Algebraic Geometry and Commutative Algebra,
     AMS-AustMS-NZMS International Meeting  in Auckland, New Zealand, taking place December 9&ndash;13, 2024.
-    <a href="talks/24/CPD.txt"></a>
+    <a href="talks/24/CPD.txt">Abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
@@ -537,7 +537,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Fri Aug 30 08:29:51 CDT 2024 by sottile</p>  
+<p>Last modified: Tue Sep 03 13:19:41 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
