uodated web page

--- a/conferences.html
+++ b/conferences.html
@@ -115,6 +115,20 @@
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
+  <li> SIAM Minisymposium on Periodic Operators,
+    <a href="https://math.artsandsciences.baylor.edu/conferences/siam-conference">SIAM TX-LA Section Meeting</a>,
+    Baylor, TX, 11&ndash;13 October 2024.
+    Co-organizing with Stephen Shipman.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li> SIAM Minisymposium on Applications of Algebraic Geometry,
+    <a href="https://math.artsandsciences.baylor.edu/conferences/siam-conference">SIAM TX-LA Section Meeting</a>,
+    Baylor, TX, 11&ndash;13 October 2024.
+    Co-organizing with Jordy Lopez-Garc&iacute;a and C.J. Bott.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
     <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
     <a href="http://www.ams.org/meetings/sectional/2319_program.html">AMS Central Section Meeting 14&ndash;15 September 2024</a>,
@@ -168,7 +182,7 @@
 <address></address>
 <!-- hhmts start Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Wed Jun 05 10:05:41 EDT 2024 by sottile</p>  
+<p>Last modified: Sat Sep 07 14:53:06 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------------------------------->
 
 </body> </html>
