--- a/talks.html
+++ b/talks.html
@@ -141,6 +141,15 @@
     <a href="talks/24/CPD.txt">Abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
+   <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Periodic Operators for Algebraic Geometers</I></font>,
+    Minisymposium on Applications of Algebraic Geometry,
+    <a href="https://math.artsandsciences.baylor.edu/conferences/siam-conference">SIAM TX-LA Section Meeting</a>,
+    Baylor, TX, 11&ndash;13 October 2024.
+    <a href="talks/24/DPO4AG.txt">abstract</a>
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
@@ -148,6 +157,12 @@
     San Antonio, TX, 14&ndash;15 September 2024.
     <a href="talks/21/Discriminant.txt">abstract</a>
    </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
   <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
@@ -157,12 +172,6 @@
     <a href="talks/24/RealBounds.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
-  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Frontiers of Arithmetic in Enumerative Geometry</I></font>, 
@@ -537,7 +546,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Tue Sep 03 13:19:41 CDT 2024 by sottile</p>  
+<p>Last modified: Sat Sep 07 14:51:35 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
