--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
    <!------   This is to fit in the rotation and cerdits  ---------------------------->   
      <table> 
        <tr valign=bottom><td><a href="Frank.html"><IMG SRC="images/frank.jpg" onmouseover="this.src='images/frank/frank_23.jpg';" ALT="Great American Eclipse 2024"></a><br>
-	   Solar Eclipse, 08-04-2024 in Hot Springs AK
+	  <!-- Solar Eclipse, 08-04-2024 in Hot Springs AK-->
 	 <!--<IMG SRC="images/frank.jpg" ALT="Grand Canyon March 2023"></a><br>  Photo Credit: Taylor Brysiewicz-->  
  <!--   </td><td>&nbsp;</td>
    <td valign=right class="rotate">Photo: Sarah Witherspoon</td>-->
