--- a/talks.html
+++ b/talks.html
@@ -155,7 +155,7 @@
     <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
     AMS Special Session on Non-Archimedean, Algebraic, Tropical Geometry and applications, Fall Central Section Meeting,
     San Antonio, TX, 14&ndash;15 September 2024.
-    <a href="talks/21/Discriminant.txt">abstract</a>
+    <a href="talks/21/Discriminant.txt">abstract</a>.  <a href="talks/24/SanAntonio.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
