--- a/talks.html
+++ b/talks.html
@@ -150,6 +150,18 @@
     <a href="talks/24/DPO4AG.txt">abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
+ <!----------------------------------------------------------------------------------------->
+ <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
+   <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Advanced</a>,
+    21 September 2024. <a href="talks/24/Five-color.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
@@ -157,12 +169,6 @@
     San Antonio, TX, 14&ndash;15 September 2024.
     <a href="talks/21/Discriminant.txt">abstract</a>.  <a href="talks/24/SanAntonio.pdf">text of talk</a>.
    </li>
-  <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
   <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
