--- a/talks.html
+++ b/talks.html
@@ -149,13 +149,26 @@
     Baylor, TX, 11&ndash;13 October 2024.
     <a href="talks/24/DPO4AG.txt">abstract</a>
    </li>
-  <!--------------------------------------------------------------------------------------------------->
- <!----------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Colloquium, Benedictine College, 7 October 2024.
+      <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+    <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
+    Math Club,   Benedictine College, 7 October 2024.
+    <a href="talks/24/Shape.txt">Abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
    <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Advanced</a>,
     21 September 2024. <a href="talks/24/Five-color.txt">abstract</a>.
  </li>
- <!---------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
 </ul>
 <hr>
@@ -256,7 +269,7 @@
       <a href="talks/24/WWSigns.txt">abstract</a>.
   </li>
    <!---------------------------------------------------------------------------------------->
-   <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
     <a href="https://mathcircle.berkeley.edu/">Berkeley Math Circle Beginners II</a>,
@@ -264,7 +277,7 @@
     13 March 2024.
     <a href="talks/18/Shape.txt">Abstract</a>.
   </li>
-  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
