updated TAGS website

--- a/conferences.html
+++ b/conferences.html
@@ -125,7 +125,7 @@
  <!---------------------------------------------------------------------------------------------------->
   <li> Special session on
     <a href="SanAntionio24/index.html"></a>Computations and Applications of Algebraic Geometry and Commutative Algebra,
-    <a href="http://www.ams.org/meetings/"></a>AMS-AustMS-NZMS International Meeting  in Auckland, New Zealand, 
+    <a href="https://ms-meet-2024.blogs.auckland.ac.nz/">AMS-AustMS-NZMS International Meeting</a>  in Auckland, New Zealand, 
      December 9&ndash;13, 2024. 
  </li>
  <!---------------------------------------------------------------------------------------------------->
