--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -40,6 +40,8 @@
       <b>Speakers:</b><br>
   &nbsp;  <a href="https://www.math.uga.edu/directory/people/pierrick-bousseau">Brendan Hassett</a>      &nbsp;
                  Brown University <br>
+  &nbsp; <s> <a href="https://public.websites.umich.edu/~pixton/">Aaron Pixton</a>              &nbsp;
+                 University of Michigan</s> <br>
  <!--  &nbsp; <s> <a href="https://sites.google.com/view/mariafox/">Maria Fox</a>              &nbsp;
                  Oklahoma State University </s> <br> -->
 
