--- a/advising/advising.html
+++ b/advising/advising.html
@@ -70,7 +70,7 @@ You needn't take my word on this, feel free to contact those who have worked wit
  <ul>
  <!------------------------------------------------------------------>
  <li>
-   <A HREF="http://www.math.tamu.edu/~cbott2/"></a>C.J. Bott, TAMU Ph.D.  Student.
+   <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D.  Student.
  </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
