--- a/conferences.html
+++ b/conferences.html
@@ -108,6 +108,14 @@
 <UL>
  <!---------------------------------------------------------------------------------------------------->
  <li>
+   <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
+      Algebraic Geometry (AG25)</a>,
+   University of Wisconsin,
+   7  &ndash; 11 July 2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
    <a href="conferences/TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
    28  &ndash; 30 March 2025.<br>
@@ -140,7 +148,8 @@
   <li> SIAM Minisymposium on Applications of Algebraic Geometry,
     <a href="https://math.artsandsciences.baylor.edu/conferences/siam-conference">SIAM TX-LA Section Meeting</a>,
     Baylor, TX, 11&ndash;13 October 2024.
-    Co-organizing with Jordy Lopez-Garc&iacute;a and C.J. Bott.
+    Co-organizing with <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>
+    and <A HREF="https://cbott2.github.io/">C.J. Bott</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
 
