--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -107,7 +107,7 @@ I have had the good fortune to work with the following mathematicians.
 
 <!--  Schubert Ideals  -->
 <dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF=""></a>, CJ Bott Texas A&amp;M University.
+    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, CJ Bott Texas A&amp;M University.
 
 
 <!--  quot 2008  -->  
