--- a/talks.html
+++ b/talks.html
@@ -120,7 +120,8 @@
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
-    Plenary talk, SIAM Conference on Applications of Algebra and Geometry,
+    Plenary talk, <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
+      Algebraic Geometry (AG25)</a>,
     Madison, Wisconsin, 7&ndash;11 July 2025.
     <a href="talks/24/CPD.txt"></a>
    </li>
