--- a/teaching.html
+++ b/teaching.html
@@ -197,7 +197,7 @@
  <br>
  <!------------------------------------------------------------------>
   <dd>
-    <A HREF=""></a>Christopher Bott, TAMU Ph.D. Student.
+    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D. Student.
   </dd>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
