--- a/CV.html
+++ b/CV.html
@@ -451,7 +451,7 @@ Cambridge University.
  </li>
    <br>
  <li>
-   <A HREF="http://www.math.tamu.edu/~cbott2/"></a>C.J. Bott, November 2020 &ndash; 
+   <A HREF="https://cbott2.github.io/">C.J. Bott</a>, November 2020 &ndash; 
  </li>
  <li>
    <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, March 2021 &ndash; 
