--- a/advising/index.html
+++ b/advising/index.html
@@ -36,7 +36,7 @@
     </li>
  <!------------------------------------------------------------------>
     <li>
-      <A HREF=""></a>CJ Bott, TAMU Ph.D. Student.
+      <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D. Student.
     </li>
  <!------------------------------------------------------------------>
    <li>
