--- a/service.html
+++ b/service.html
@@ -319,7 +319,7 @@
  </dd>
  <!------------------------------------------------------------------>
  <dd>
-   <A HREF="http://www.math.tamu.edu/~cbott2/"></a>C.J. Bott, TAMU Ph.D.  Student.
+    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D.  Student.
  </dd>
  <!------------------------------------------------------------------>
  <dd>
