more on projects

--- a/teaching.html
+++ b/teaching.html
@@ -139,7 +139,7 @@
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
     <tr valign=top><td><font color=brown>MATH 666</font></td>
-      <td><a href="teaching/24.2/Toric.html"></a>Toric Varieties</td>
+      <td><a href="teaching/24.2/Toric.html">Toric Varieties</a></td>
       <td align=left><a href="teaching/24.2/Toric.txt">Outline</a> </td>
       <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 206
       </td>
