--- a/teaching/24.2/Toric.html
+++ b/teaching/24.2/Toric.html
@@ -83,7 +83,7 @@ commutative algebra and algebraic geometry will be helpful.
  (But I will mention exercises, which are intended for you to fill in 
   gaps in the presentation, thereby learning a bit more.)
  At the end of the term, students will present projects.
- <!-- I am starting a file  with some suggestions <a href="Projects.txt">here</a>. -->
+ Here is a  <a href="Projects.txt">file with some suggestions</a>.
 </p>
 <!---------------------------------------------------------------------------->
 <hr>
