--- a/conferences.html
+++ b/conferences.html
@@ -122,6 +122,11 @@
    Supported by NSF grant DMS-2349244.
  </li>
  <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="http://www.ims.cuhk.edu.hk/activities/conferences/mist/2025/">Schubert Calculus and Related Topics</a>,
+   12&ndash;18 March 2025.
+   Chinese University of Hong Kong.
+ </li>  
  <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
     <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
@@ -167,7 +172,7 @@
 <address></address>
 <!-- hhmts start Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sat Sep 07 14:53:06 CDT 2024 by sottile</p>  
+<p>Last modified: Tue Oct 08 08:16:18 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------------------------------->
 
 </body> </html>
