--- a/talks.html
+++ b/talks.html
@@ -142,15 +142,28 @@
     <a href="talks/24/CPD.txt">Abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
+   <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Advanced</a>,
+    9 November 2024. <a href="talks/24/Five-color.txt">abstract</a>.
+ </li>
+ <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Periodic Operators for Algebraic Geometers</I></font>,
     Minisymposium on Applications of Algebraic Geometry,
     <a href="https://math.artsandsciences.baylor.edu/conferences/siam-conference">SIAM TX-LA Section Meeting</a>,
     Baylor, TX, 11&ndash;13 October 2024.
-    <a href="talks/24/DPO4AG.txt">abstract</a>
+    <a href="talks/24/DPO4AG.txt">abstract</a>.
+    <a href="talks/24/DPO4AG.pdf">text of talk</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
     <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
@@ -164,19 +177,7 @@
       <a href="talks/23/SAGA.txt">Abstract</a>. 
   </li>
  <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
-   <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Advanced</a>,
-    21 September 2024. <a href="talks/24/Five-color.txt">abstract</a>.
- </li>
  <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
-  <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
     AMS Special Session on Non-Archimedean, Algebraic, Tropical Geometry and applications, Fall Central Section Meeting,
