--- a/talks.html
+++ b/talks.html
@@ -151,7 +151,7 @@
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Periodic Operators for Algebraic Geometers</I></font>,
-    Minisymposium on Applications of Algebraic Geometry,
+    Minisymposium on Nonlinear Algebra in Applications,
     <a href="https://math.artsandsciences.baylor.edu/conferences/siam-conference">SIAM TX-LA Section Meeting</a>,
     Baylor, TX, 11&ndash;13 October 2024.
     <a href="talks/24/DPO4AG.txt">abstract</a>.
