--- a/teaching/24.2/Toric.html
+++ b/teaching/24.2/Toric.html
@@ -84,6 +84,8 @@ commutative algebra and algebraic geometry will be helpful.
   gaps in the presentation, thereby learning a bit more.)
  At the end of the term, students will present projects.
  Here is a  <a href="Projects.txt">file with some suggestions</a>.
+ <br>
+ While I do not collect written work, here are some <a href="Exercises.pdf">exercises</a>.
 </p>
 <!---------------------------------------------------------------------------->
 <hr>
@@ -100,7 +102,7 @@ commutative algebra and algebraic geometry will be helpful.
    </ul>
 
      
-   <font size=+1 color=brown>Schedule</font><br>
+   <font size=+1 color=brown>Topics:</font><br>
    <ul>
     <li> <font color=blue><b>Toric ideals</b></font> </li>
      <ul> 
